@@ -220,7 +220,8 @@ The default value for this parameter is 0.
 Optional.  Comma-separated list of instant command name(s) to send to
 the UPS when you request its shutdown.
 +
-Default value is built into each driver (where supported).
+Default logic is built into each driver (where supported) and can be
+referenced here as the `shutdown.default` value.
 +
 The primary use-case is for devices whose drivers "natively" support
 trying several commands, but the built-in order of those calls a
